# packages

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  index.html  install.sh  sign_all.sh
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml
.github/workflows/: ci.yml  import-release.yml  pages.yml
apt/: MAINTAINER.md  README.md  crateria.list
arch/: PKGBUILD  README.md
docs/: SIGNING.md
flatpak/: README.md  io.github.idlescreen.idle.yaml
metapackages/: README.md
metapackages/app-cosmic/: README.md  control
metapackages/idle-cosmic/: control
metapackages/idlescreen/: control
metapackages/idlescreen-cosmic/: README.md  control
nix/: README.md  default.nix
rpm/: README.md  crateria.repo
rpm/pool/: idle-saver-cosmos-2.0.2-1.x86_64.rpm  idle-studio-0.2.1-1.x86_64.rpm  idle-tui-2.2.0-1.x86_64.rpm  idlescreen-savers-2.0.1-1.x86_64.rpm  morphball-0.1.53-1.x86_64.rpm  saver-chaos-2.0.0-1.x86_64.rpm  saver-ripple-2.0.0-1.x86_64.rpm  saver-storm-2.0.0-1.x86_64.rpm  trance-0.3.57-1.x86_64.rpm  trance-applet-0.3.56-1.x86_64.rpm  trance-cli-0.3.56-1.x86_64.rpm  trance-plugin-beams-0.3.8-1.x86_64.rpm  trance-plugin-bursts-0.3.8-1.x86_64.rpm  trance-plugin-chaos-0.3.8-1.x86_64.rpm  trance-plugin-cosmos-0.3.8-1.x86_64.rpm  trance-plugin-glyphs-0.3.8-1.x86_64.rpm  trance-plugin-gnats-0.3.8-1.x86_64.rpm  trance-plugin-hearth-0.3.8-1.x86_64.rpm  trance-plugin-radar-0.3.8-1.x86_64.rpm  trance-plugin-ripple-0.3.8-1.x86_64.rpm  (+3 more)
scripts/: prune.sh
src/: install.rs  prune.rs  sign.rs  update.rs
(+112 files in other folders)
