[package]
name = "idlescreen-packages"
version = "3.2.31"
edition = "2024"
description = "Repository maintenance tools for IdleScreen package distribution"
license = "Apache-2.0"

[lib]
name = "idlescreen_packages"
path = "src/lib.rs"

[[bin]]
name = "update"
path = "src/update.rs"

[[bin]]
name = "prune"
path = "src/prune.rs"

[[bin]]
name = "sign"
path = "src/sign.rs"

[[bin]]
name = "install"
path = "src/install.rs"

[dependencies]
semver = "1.0"

[dev-dependencies]
proptest = "1.6"
